--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -19,15 +19,15 @@
           class="unset ml-4 hover:text-text-link"
           href="https://github.com/jalilbengoufa"
         >
-          <i class="fa-brands fa-github" aria-hidden="true" title="Blogster on GitHub"></i>
+          <i class="fa-brands fa-github" aria-hidden="true" title="Jalil on GitHub"></i>
           <span>GitHub</span>
         </a>
         <a
           class="unset ml-4 hover:text-text-link"
           href="https://twitter.com/geniustaiga1"
-          aria-label="Dinesh on Twitter"
+          aria-label="Jalil on Twitter"
         >
-          <i class="fa-brands fa-twitter" aria-hidden="true" title="Dinesh on Twitter"></i>
+          <i class="fa-brands fa-twitter" aria-hidden="true" title="Jalil on Twitter"></i>
           <span>Twitter</span>
         </a>
       </div>
