--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,25 @@
 ---
 
 <footer class="text-sm leading-[1.75] mt-4">
+  <div
+class="border-b-[1px] border-t-[1px] border-current py-1 flex items-center justify-center gap-1"
+>
+<a
+  class="unset ml-4 hover:text-text-link"
+  href="https://github.com/jalilbengoufa"
+>
+  <i class="fa-brands fa-github" aria-hidden="true" title="Jalil on GitHub"></i>
+  <span>GitHub</span>
+</a>
+<a
+  class="unset ml-4 hover:text-text-link"
+  href="https://twitter.com/geniustaiga1"
+  aria-label="Jalil on Twitter"
+>
+  <i class="fa-brands fa-twitter" aria-hidden="true" title="Jalil on Twitter"></i>
+  <span>Twitter</span>
+</a>
+</div>
 </footer>
 
 <style>
