--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -34,14 +34,11 @@
     </div>
     <div>
       <p class="mb-4">
-        👋 Hi, I’m @jalilbengoufa.
+        👋 Hi, I’m Jalil.
       </p>
       <p class="mb-4">
-        As a full-stack developer, I am skilled in both front-end and back-end development, with a passion for building intuitive and scalable web applications. 
-        With experience in a variety of programming languages and frameworks, including Typescript, Golang, and Java. 
-        I also have extensive experience working with Linux systems and am proficient in utilizing the major cloud platforms, including AWS, GCP, and DigitalOcean. 
-        I have a strong understanding of networking and infrastructure, and have successfully implemented a range of solutions on these platforms. 
-        Whether it's deploying applications, managing virtual machines, or optimizing cloud resources.
+        I am a full-stack developer with a passion for learning and sharing knowledge. My enthusiasm lies in solving problems through web technologies. 
+        I specialize in building and deploying web applications, focusing on scalability and efficiency.
       </p>
     </div>
   </section>
