--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -30,6 +30,14 @@
           <i class="fa-brands fa-twitter" aria-hidden="true" title="Jalil on Twitter"></i>
           <span>Twitter</span>
         </a>
+        <a
+        class="unset ml-4 hover:text-text-link"
+        href="https://www.linkedin.com/in/jalil-bengoufa/"
+        aria-label="Jalil on LinkedIn"
+      >
+        <i class="fa-brands fa-linkedin" aria-hidden="true" title="Jalil on LinkedIn"></i>
+        <span>LinkedIn</span>
+      </a>
       </div>
     </div>
     <div>
