--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,6 +20,14 @@ class="border-b-[1px] border-t-[1px] border-current py-1 flex items-center justi
   <i class="fa-brands fa-twitter" aria-hidden="true" title="Jalil on Twitter"></i>
   <span>Twitter</span>
 </a>
+<a
+class="unset ml-4 hover:text-text-link"
+href="https://www.linkedin.com/in/jalil-bengoufa/"
+aria-label="Jalil on LinkedIn"
+>
+<i class="fa-brands fa-linkedin" aria-hidden="true" title="Jalil on LinkedIn"></i>
+<span>LinkedIn</span>
+</a>
 </div>
 </footer>
 
