--- a/src/layouts/FontAwesome.astro
+++ b/src/layouts/FontAwesome.astro
@@ -31,7 +31,7 @@
     comment the *.bareminimum.css files.
    -->
   
-    <!-- <link href="/fontawesome/css/brands.min.css" rel="stylesheet" /> -->
+  <link href="/fontawesome/css/brands.min.css" rel="stylesheet" />
   <link href="/fontawesome/css/fontawesome.min.css" rel="stylesheet" />
  
 
