--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -45,8 +45,7 @@
         👋 Hi, I’m Jalil.
       </p>
       <p class="mb-4">
-        I am a full-stack developer with a passion for learning and sharing knowledge. My enthusiasm lies in solving problems through web technologies. 
-        I specialize in building and deploying web applications, focusing on scalability and efficiency.
+        Full-stack developer with extensive experience in designing and building robust APIs and services, deploying them on various cloud platforms. Proficient in Linux and skilled across major cloud providers such as GCP or AWS. Adept at rapidly learning new technologies and innovatively finding approaches to solve complex problems and meet evolving job demands.
       </p>
     </div>
   </section>
